--- a/package.json
+++ b/package.json
@@ -3,9 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.5.1",
+    "@material-ui/icons": "^3.0.1",
+    "axios": "^0.18.0",
+    "moment": "^2.22.2",
     "react": "^16.6.3",
+    "react-big-calendar": "^0.20.2",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-moment": "^0.8.3",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1",
+    "react-skylight": "^0.5.1",
+    "react-table": "^6.8.6",
+    "reactstrap": "^6.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
